codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_workflow_agent_details.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 1184
expression: agents_popup
---
• Running workflow repo_review
  └ 3 agent(s): 1 running, 1 done, 1 failed
  ├ Phase: Inspect (1/2 done, 1 running, 0 failed)
  │   done source map · explore · gpt-5.4-mini
  │     Map the repository modules and important entry points.
  │   running protocol scan
  │     Inspect app-server protocol changes.
  ├ Phase: Synthesize (0/1 done, 0 running, 1 failed)
  │   failed final synthesis · writer · gpt-5.4
  │     error: schema validation failed
  ├ Logs
  │   phase Inspect started


  Workflow: repo_review
  Phase: Inspect · 2 agent(s): 1 running, 1 done, 0 failed

› 1. Back to phases         Return to workflow phase list
  2. done source map        explore · gpt-5.4-mini · Map the repository modules and important entry
                            points.
  3. running protocol scan  Inspect app-server protocol changes.

  enter back · esc close
